# pot-pourri

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demonstration/: double-descent.ipynb
notebooks/: extract_doc_data.ipynb  llamaIndexe_&_chroma.ipynb
pyspark/: dockerfile
