[project]
name = "pdf-parser-and-comprehension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "doclayout-yolo>=0.0.2",
    "huggingface-hub>=0.27.1",
    "markitdown>=0.0.1a3",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.1",
    "ruff>=0.9.2",
    "smolagents>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
